Update repos configurations.

--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Suhail Abood <suhail.abood@gmail.com> (suhailabood.me)",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/suhdev/strike-validator.git"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "strike-util": "^1.0.5"
+  }
 }
