--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./es6",
+        "outDir": "./lib",
         "target": "es6",
-        "module": "es6"
+        "module": "commonjs"
     },
     "exclude": [
         "node_modules",
