--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     }
   },
   "devDependencies": {
+    "babel-polyfill": "^6.20.0",
     "chai": "^3.5.0",
     "eslint": "^3.12.2",
     "jspm": "^0.16.48",
